# rcah18_pepper_navigation

./: CMakeLists.txt  README.md  package.xml
config/: joy2speed_logitech_controller.yaml  joy2speed_xbox_controller.yaml
hector_slam/hector_mapping/launch/: mapping.launch
launch/: amcl_omni.launch  gmapping.launch  localization.launch  localization_and_planning.launch  mapping.launch  move_base.launch  pcl2laser.launch  remote_machine.launch  reset_head.launch  teleop.launch
param/: costmap_common_params.yaml  dummy.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
scripts/: navigation_location_parameters.py  pepper_controller.py  pepper_speech_to_navigation_bridge.py
src/: teleop_manager.cpp
